<resources>
    <string name="app_name">iBudget</string>
    <string name="ibudget_logo_banner">iBudget Logo Banner</string>
    <string name="money_balance">0.00</string>
    <string name="php">PHP</string>
    <string name="available_balance">Available Balance</string>
    <string name="budget_list">Budget List</string>
    <string name="history">History</string>
    <string name="create_budget">Create Budget</string>
    <string name="help">HELP</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="stringhint_100_00">100.00</string>
    <string name="settings_vector_pathdata">M19.14,12.94c0.04,-0.3 0.06,-0.61 0.06,-0.94c0,-0.32 -0.02,-0.64 -0.07,-0.94l2.03,-1.58c0.18,-0.14 0.23,-0.41 0.12,-0.61l-1.92,-3.32c-0.12,-0.22 -0.37,-0.29 -0.59,-0.22l-2.39,0.96c-0.5,-0.38 -1.03,-0.7 -1.62,-0.94L14.4,2.81c-0.04,-0.24 -0.24,-0.41 -0.48,-0.41h-3.84c-0.24,0 -0.43,0.17 -0.47,0.41L9.25,5.35C8.66,5.59 8.12,5.92 7.63,6.29L5.24,5.33c-0.22,-0.08 -0.47,0 -0.59,0.22L2.74,8.87C2.62,9.08 2.66,9.34 2.86,9.48l2.03,1.58C4.84,11.36 4.8,11.69 4.8,12s0.02,0.64 0.07,0.94l-2.03,1.58c-0.18,0.14 -0.23,0.41 -0.12,0.61l1.92,3.32c0.12,0.22 0.37,0.29 0.59,0.22l2.39,-0.96c0.5,0.38 1.03,0.7 1.62,0.94l0.36,2.54c0.05,0.24 0.24,0.41 0.48,0.41h3.84c0.24,0 0.44,-0.17 0.47,-0.41l0.36,-2.54c0.59,-0.24 1.13,-0.56 1.62,-0.94l2.39,0.96c0.22,0.08 0.47,0 0.59,-0.22l1.92,-3.32c0.12,-0.22 0.07,-0.47 -0.12,-0.61L19.14,12.94zM12,15.6c-1.98,0 -3.6,-1.62 -3.6,-3.6s1.62,-3.6 3.6,-3.6s3.6,1.62 3.6,3.6S13.98,15.6 12,15.6z</string>
    <string name="title_activity_privacy_policy">Privacy Policy</string>
    <string name="privacy_policy_text">
        "\n𝗶𝗕𝘂𝗱𝗴𝗲𝘁\n\nYour privacy is important to us. This policy is to respect your privacy regarding any information we may collect from you through our app, iBudget.
We only ask for personal information when we truly need it to provide a service to you. We collect it by fair and lawful means, with your knowledge and consent. We also let you know why we’re collecting it and how it will be used.
We only retain collected information for as long as necessary to provide you with your requested service. What data we store, we’ll protect within commercially acceptable means to prevent loss and theft, as well as unauthorized access, disclosure, copying, use or modification.\n\n

We don’t share any personally identifying information publicly or with third-parties, except when required to by law.

Our app may link to external sites that are not operated by us. Please be aware that we have no control over the content and practices of these sites, and cannot accept responsibility or liability for their respective privacy policies.

You are free to refuse our request for your personal information, with the understanding that we may be unable to provide you with some of your desired services.

Your continued use of our app will be regarded as acceptance of our practices around privacy and personal information. If you have any questions about how we handle user data and personal information, feel free to contact us.

𝐓𝐡𝐢𝐬 𝐩𝐨𝐥𝐢𝐜𝐲 𝐢𝐬 𝐞𝐟𝐟𝐞𝐜𝐭𝐢𝐯𝐞 𝐚𝐬 𝐨𝐟 𝐉𝐚𝐧𝐮𝐚𝐫𝐲 𝟎𝟏, 𝟐𝟎𝟐𝟏.\n"
    </string>
    <string name="action_settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="how_to_use">How To Use</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="contact_or_reach_out">Contact or Reach out</string>
    <string name="input_your_money">Input your Money, Example: 100.00</string>
    <string name="budget_title">Budget Title</string>
    <string name="done">done</string>
    <string name="description_optional">Description (Optional)</string>
    <string name="amount_of_money_to_spend">Amount of Money to Spend, Ex: 100.00</string>
    <string name="loading">loading…</string>
    <string name="back">back</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="show">SHOW</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="sign_up">Sign Up</string>
    <string name="data_privacy_policy">DATA PRIVACY POLICY</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="username">Username</string>
    <string name="email_tooltip">Your inputted Email Address will be used to sign in to the account</string>
    <string name="password_tooltip">Your inputted Password will be used to sign in to the account</string>
    <string name="username_tooltip">Your username is going to serve as your identifier within the system</string>
    <string name="username_hint">You can use letters, numbers &amp; periods</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="sign_in_instead">Sign In Instead</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password_string">Forgot Password</string>
    <string name="email_sent_confirmation">We have sent an email message to your email address provided. The password reset message will be delivered to your Inbox or Spam Folder shortly.</string>
    <string name="send_email">Send Email</string>
    <string name="sign_out">Sign Out</string>
    <string name="user_uid">User UID:</string>
    <string name="sign_up_for_new_account">Sign Up for New Account</string>
    <string name="copy_text_to_clipboard">Copy Text to Clipboard</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="night_mode">Night Mode</string>
    <string name="facebook_app_id">153094382944442</string>
    <string name="fb_login_protocol_scheme">fb153094382944442</string>

</resources>