<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_desaturated_blue"
    android:layoutDirection="ltr"
    android:screenOrientation="portrait"
    tools:context=".SignupActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/logo_textHeaderImageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/made_tommy_regular"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailFieldInputLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="35dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="35dp"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo_textHeaderImageView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_emailField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/email_address"
                android:background="@android:color/transparent"
                android:fontFamily="@font/ubuntu"
                android:hint="@string/email_address"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLength="90"
                android:maxLines="1"
                android:textColor="@color/cornsilk"
                android:textStyle="bold"
                android:tooltipText="@string/email_tooltip"
                app:boxBackgroundColor="@android:color/transparent" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usernameFieldInputLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="35dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="35dp"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailFieldInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_usernameField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/username"
                android:background="@android:color/transparent"
                android:fontFamily="@font/ubuntu"
                android:hint="@string/username"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/cornsilk"
                android:tooltipText="@string/username_tooltip"
                app:boxBackgroundColor="@android:color/transparent" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/username_hintText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="35dp"
            android:text="@string/username_hint"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/usernameFieldInputLayout" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordFieldInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="35dp"
            android:autofillHints="@string/password"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username_hintText"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_passwordField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:fontFamily="@font/ubuntu"
                android:hint="@string/password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/cornsilk"
                android:textStyle="bold"
                android:tooltipText="@string/password_tooltip"
                app:boxBackgroundColor="@android:color/transparent" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirmPasswordFieldInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:autofillHints="@string/password"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordFieldInputLayout"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_confirmPasswordField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/ubuntu"
                android:hint="@string/confirm_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/cornsilk"
                app:boxBackgroundColor="@android:color/transparent" />

        </com.google.android.material.textfield.TextInputLayout>


        <RadioGroup
            android:id="@+id/genderSelectRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:buttonTint="@android:color/white"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirmPasswordFieldInputLayout">

            <RadioButton
                android:id="@+id/male_selectGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:textColor="@color/white" />

            <RadioButton
                android:id="@+id/female_selectGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/female"
                android:textColor="@color/white" />

        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signUp_logInInsteadButton"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:text="@string/sign_in_instead"
            android:textAllCaps="false"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/signUp_signUpButton"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/genderSelectRadioGroup"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/signUp_signUpButton"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="35dp"
            android:background="@drawable/login_activity_button"
            android:fontFamily="@font/ubuntu_bold"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textSize="20sp"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/genderSelectRadioGroup" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>