<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_desaturated_blue"
    android:layoutDirection="ltr"
    tools:context=".ForgotPassword">

    <TextView
        android:id="@+id/textViewLabelCreateBudget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/made_tommy_regular"
        android:includeFontPadding="false"
        android:layout_marginTop="35dp"
        android:text="@string/forgot_password_string"
        android:textColor="@color/white"
        android:layout_marginStart="35dp"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/linearLayoutForCreateDescriptionId"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_marginStart="10dp"
        android:background="@drawable/createbudget_field_background"
        android:elevation="5dp"
        android:gravity="center_vertical"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewLabelCreateBudget"
        tools:layout_editor_absoluteX="-15dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/ic_email_outlined_24dp"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/create_budget" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/forgotPassword_EmailField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5sp"
            android:autofillHints="@string/email_address"
            android:background="@null"
            android:fontFamily="@font/made_tommy_regular"
            android:hint="@string/email_address"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="@color/cornsilk"
            android:textColorHint="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/emailConfirmText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"

        android:textSize="18sp"
        android:textAlignment="textStart"
        android:layout_marginEnd="35dp"
        android:textColor="@color/teal_200"
        android:layout_marginStart="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutForCreateDescriptionId" />

    <Button
        android:id="@+id/forgotPassword_sendEmailButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/card_background"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/send_email"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailConfirmText" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/forgotPassword_Back"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/back"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotPassword_sendEmailButton"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>