<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dashboard_background"
    android:layoutDirection="ltr"
    android:screenOrientation="portrait"
    tools:context=".DashboardActivity">

    <!-- Default Layout of the App is decided to be Left-To-Right -->

    <View
        android:id="@+id/divider_separator"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="80dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dashboard_availableBalanceTextView" />

    <ImageView
        android:id="@+id/dashboard_iBudget_Logo_Banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/ibudget_logo_banner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ibudget_logobanner_dashboard" />

    <TextView
        android:id="@+id/dashboard_userMoneyBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/ubuntu_bold"
        android:gravity="center"
        android:text="@string/money_balance"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dashboard_iBudget_Logo_Banner" />

    <TextView
        android:id="@+id/dashboard_phpTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="5dp"
        android:text="@string/php"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/dashboard_availableBalanceTextView"
        app:layout_constraintEnd_toStartOf="@+id/dashboard_userMoneyBalance"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dashboard_iBudget_Logo_Banner"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/dashboard_availableBalanceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/ubuntu"
        android:text="@string/available_balance"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dashboard_userMoneyBalance" />

    <Button
        android:id="@+id/dashboard_addMoneyDialogButton"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/ic_add_circle"
        android:backgroundTint="@color/black"
        android:onClick="showAddMoneyAlert"
        app:layout_constraintBottom_toTopOf="@+id/dashboard_helpButton"
        app:layout_constraintStart_toEndOf="@+id/dashboard_userMoneyBalance"
        app:layout_constraintTop_toBottomOf="@+id/dashboard_iBudget_Logo_Banner"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/dashboard_createBudgetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/roundedbutton_blue"
        android:text="@string/create_budget"
        android:textAllCaps="true"
        android:textSize="12sp"
        app:icon="@drawable/ic_add_circle"
        app:iconGravity="textStart"
        app:iconPadding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/divider_separator"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dashboard_availableBalanceTextView"
        app:layout_constraintVertical_bias="0.0" />
    <!--        style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"-->


    <ImageView
        android:id="@+id/dashboard_helpButton"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/ic_help_24dp"
        android:backgroundTint="@color/bluish_light"
        android:contentDescription="@string/help"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutSelectTab"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/dashboard_createBudgetButton"
        app:layout_constraintTop_toBottomOf="@+id/dashboard_availableBalanceTextView"
        app:layout_constraintVertical_bias="0.366" />

    <LinearLayout
        android:id="@+id/linearLayoutSelectTab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/divider_separator">

        <Button
            android:id="@+id/dashboard_budgetListTab"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@android:color/white"
            android:fontFamily="@font/ubuntu"
            android:paddingStart="75dp"
            android:paddingEnd="0dp"
            android:text="@string/budget_list"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/dashboard_historyTabButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider_separator" />

        <View
            android:id="@+id/divider_separator_inbetween"
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="?android:attr/listDivider" />

        <Button
            android:id="@+id/dashboard_historyTabButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:fontFamily="@font/ubuntu"
            android:gravity="center"
            android:text="@string/history"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider_separator" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dashboardBudgetListLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:baselineAligned="false"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutSelectTab"
        app:layout_constraintVertical_bias="0.0">

        <!-- DITO I-DISPLAY ANG GENERATED BUDGETS -->

        <!--        <androidx.fragment.app.FragmentContainerView-->
        <!--            android:id="@+id/budgetListFragmentId"-->
        <!--            android:name="com.example.budgetmanager.BudgetListFragment"-->
        <!--            android:layout_width="0dp"-->
        <!--            android:layout_height="match_parent"-->
        <!--            android:layout_weight="1" />-->


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>